--- a/frontend/src/app/components/main/main.tmpl.html
+++ b/frontend/src/app/components/main/main.tmpl.html
@@ -1,7 +1,7 @@
-<div class="col-sm-3 col-md-2">
-    <sidebar-comp></sidebar-comp>
-</div>
-<div class="col-md-10 col-sm-9 col-md-offset-2 col-sm-offset-3">
+<!--<div class="col-sm-3 col-md-2">-->
+    <!--<sidebar-comp></sidebar-comp>-->
+<!--</div>-->
+<!--<div class="col-md-10 col-sm-9 col-md-offset-2 col-sm-offset-3">-->
     <header-comp></header-comp>
     <router-outlet></router-outlet>
-</div>
+<!--</div>-->
