fix error anf added exponential and difference

--- a/frontend/src/app/components/header/header.tmpl.html
+++ b/frontend/src/app/components/header/header.tmpl.html
@@ -1,10 +1,10 @@
 <div class="header">
     <div class="menu col-sm-12">
-        <div class="item-menu"><a [routerLink]="['/initial']">Исходные данные</a></div>
-        <div class="item-menu">Метод конечных разностей</div>
-        <div class="item-menu">Экспоненциальный метод</div>
-        <div class="item-menu">Метод #3</div>
-        <div class="item-menu">Метод #4</div>
-        <div class="item-menu">Метод #5</div>
+        <div class="item-menu col-sm-2"><a [routerLink]="['/initial']">Исходные данные</a></div>
+        <div class="item-menu col-sm-2"><a [routerLink]="['/difference']">Метод конечных разностей</a></div>
+        <div class="item-menu col-sm-2"><a [routerLink]="['/exponential']">Метод экспоненциального сглаживания</a></div>
+        <div class="item-menu col-sm-2">Метод n-кратного экспоненциального сглаживания</div>
+        <div class="item-menu col-sm-2">Метод знакопеременного сглаживания</div>
+        <div class="item-menu col-sm-2">Метод параболического сглаживания</div>
     </div>
 </div>
