--- a/frontend/src/app/components/initial/initial.tmpl.html
+++ b/frontend/src/app/components/initial/initial.tmpl.html
@@ -1,30 +1,32 @@
 <div class="initial">
-    <!--<tabset>-->
-        <!--<tab heading="Исходные данные">-->
-    <div class="line-chart">
-        <svg width="900" height="500"></svg>
+    <div class="row" style="padding-right: 20px; padding-left: 20px;">
+        <h3>Условия задачи</h3>
+        <div class="col-sm-8">
+            <div class="initial-task"></div>
+        </div>
+        <div class="col-sm-4">
+            <table class="table table-hover">
+                <thead>
+                <tr>
+                    <th></th>
+                    <th>Время, c</th>
+                    <th>Скорость</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr *ngFor="let measurement of measurements">
+                    <td>{{ measurement.index }}</td>
+                    <td>{{ measurement.timeDisplay }}</td>
+                    <td>{{ measurement.speed }}</td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
     </div>
-    <div class="column-table">
-        <table class="table table-hover">
-            <thead>
-            <tr>
-                <th></th>
-                <th>Время, c</th>
-                <th>Скорость</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr *ngFor="let measurement of measurements">
-                <td>{{ measurement.index }}</td>
-                <td>{{ measurement.timeDisplay }}</td>
-                <td>{{ measurement.speed }}</td>
-            </tr>
-            </tbody>
-        </table>
+    <div class="row" style="padding-right: 20px; padding-left: 20px;">
+        <h3>График изменения скорости ветра во времени</h3>
+        <div class="line-chart">
+            <svg width="1050" height="600"></svg>
+        </div>
     </div>
-        <!--</tab>-->
-        <!--<tab heading="График">-->
-            <!--&lt;!&ndash;<svg width="900" height="500"></svg>&ndash;&gt;-->
-        <!--</tab>-->
-    <!--</tabset>-->
 </div>
