--- a/frontend/src/app/components/exponential/exponential.tmpl.html
+++ b/frontend/src/app/components/exponential/exponential.tmpl.html
@@ -1,1 +1,29 @@
-Exponential
+<div class="exponential">
+    <div class="col-sm-12">
+        <!--<div class="form-group">-->
+            <label class="col-sm-3">Выберите коэффициент:</label>
+            <div class="col-sm-4">
+                <select [(ngModel)]="k" class="form-control">
+                    <option>0.1</option>
+                    <option>0.2</option>
+                    <option>0.3</option>
+                    <option>0.4</option>
+                    <option>0.5</option>
+                    <option>0.6</option>
+                    <option>0.7</option>
+                    <option>0.8</option>
+                    <option>0.9</option>
+                </select>
+            </div>
+        <!--</div>-->
+        <div class="col-sm-5">
+            <button class="btn btn-info" (click)="loadExponentialData()">Построить</button>
+            <button class="btn btn-info" (click)="clear()">Очистить</button>
+        </div>
+    </div>
+    <div class="col-sm-12">
+        <div class="line-chart">
+            <svg width="1050" height="600"></svg>
+        </div>
+    </div>
+</div>
